// -*- text -*-

  ChangeLog
  =========

This is a detailed list of ongoing changes.  Add changes to 
the top of this file.

Changes by R. Holmes on  4 Jul 2004
--------------------------------------

Weights for det, blumi, and flumi added to database and used in
TaStandardAna.  This make use of a weight checking routine in
VaAnalysis (which checks whether weights are nonnegative and have
nonzero sum).  To use add to database lines like

   detwts  1.1 1.2 1.3 1.4
   blumiwts 0.91 0.92 0.93 0.94 0.95 0.96 0.97 0.98
   flumiwts 1.1 1.2

There must be four detector weights, eight blumi weights, and two
flumi weights (even if e.g. only two detectors are used in the
database, all four weights must be there.)  If weights are absent
unweighted averages are used.


Changes by R. Holmes on  2 Jul 2004
--------------------------------------

Hall C low current cuts.  To use, change the database as follows:

Add the cut to the list of cuts in use:

      ncuts 6
      cutnames Low_beam Beam_burp Evt_seq Pair_seq Startup Low_beam_c

Add the cut threshold:

      lobeamc  0.002

Add the BCM to use for Hall C current monitoring (defaults to bcm10, no
foreseeable need to change this but the capability's there)

      curmonc  bcm10

Given that, then tree elements like cond_low_beam_c and cut_low_beam_c
reflect low beam in bcm10, and asymmetry will not be computed for bcm10
in events where cut_low_beam_c is nonzero; however, ok_cut and ok_cond
will not be affected by this cut.

Also, I fixed a longstanding unnoticed bug, unnoticed because it only
crops up if the database fails to define a cut in the cutnames -- but it
can cause a mystery seg fault in that case.


Changes by R. Holmes on  28 Jun 2004
--------------------------------------

Some changes to the prompt analysis macros:

- det2, det4, det_hi, det_all, det_sum, and flumi added to analysis

- Modulation (dithering) corrections now work

- For regression and modulation corrections, the set of monitors used