@@ -138,14 +138,17 @@ private:
   static Double_t fgLoBeam;    // cut threshold from database
   static Double_t fgLoBeamC;    // cut threshold from database
   static Double_t fgBurpCut;   // cut threshold from database
+  static Double_t fgSatCut;    // cut threshold from database
   static Cut_t fgLoBeamNo;     // cut number for low beam
   static Cut_t fgLoBeamCNo;     // cut number for low beam C
   static Cut_t fgBurpNo;       // cut number for beam burp
+  static Cut_t fgSatNo;        // cut number for saturation
   static Cut_t fgEvtSeqNo;     // cut number for event sequence
   static Cut_t fgStartupNo;    // cut number for startup
   static UInt_t fgOversample;  // oversample factor
   static UInt_t fgCurMon;      // index to current monitor for cuts
   static UInt_t fgCurMonC;     // index to current monitor for cuts
+  static UInt_t fgDet[4];      // index to detectors for cuts
   static UInt_t fgSizeConst;   // size of first physics event should be size of all
   static UInt_t fgNCuts;       // Length of cut array
   static Bool_t fgCalib;       // True to include calibration variables
